--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,32 +5,33 @@ targetSdk = "34"
 multidex = "2.0.1"
 
 agp = "8.1.4"
-kotlin = "1.9.23"
+kotlin = "2.0.20"
 core-ktx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
+junitVersion = "1.2.1"
+androidx-test-ext-junit = "1.2.1"
+espresso-core = "3.6.1"
 lifecycle-runtime-ktx = "2.6.2"
-activity-compose = "1.9.0"
-compose-bom = "2024.05.00"
-composeKotlinCompiler = "1.5.13"
-composeRuntime="1.6.7"
+activity-compose = "1.9.2"
+compose-bom = "2024.09.02"
+composeKotlinCompiler = "1.5.15"
+composeRuntime="1.7.2"
 material = "1.12.0"
-foundation = "1.6.7"
-compose = "1.6.7"
-androidxMaterial = "1.6.7"
+foundation = "1.7.2"
+compose = "1.7.2"
+androidxMaterial = "1.7.2"
 constraintlayout = "2.1.4"
 glide = "4.16.0"
+ksp = "2.0.20-1.0.25"
 
-androidxAppCompat = "1.6.1"
+androidxAppCompat = "1.7.0"
 androidxCoreSplashscreen = "1.0.1"
-androidxLifecycle = "2.8.0"
+androidxLifecycle = "2.8.6"
 androidxWindowManager = "1.0.0"
 
 coil = "2.5.0"
 detekt = "1.22.0"
-googleService = "4.4.1"
+googleService = "4.4.2"
 firebaseAnalytics = "21.2.0"
 firebaseCrashlytics = "18.3.2"
 firebasePref = "20.2.0"
@@ -39,10 +40,10 @@ firebaseRemoteConfig = "21.2.0"
 koin = "3.4.0"
 dagger = "2.51.1"
 
-kotlinxCoroutines = "1.7.3"
-kotlinxDatetime = "0.4.0"
+kotlinxCoroutines = "1.8.1"
+kotlinxDatetime = "0.6.0"
 kotlinxImmutable = "0.3.5"
-kotlinxSerializationJson = "1.5.1"
+kotlinxSerializationJson = "1.7.0"
 
 mockk = "1.12.4"
 okhttp = "4.12.0"
@@ -51,15 +52,15 @@ retrofitKotlinxSerializationJson = "1.0.0"
 room = "2.6.1"
 timber = "5.0.1"
 voyager = "1.0.0"
-nav = "2.7.7"
-navigationFragmentKtx = "2.7.7"
-navigationUiKtx = "2.7.7"
-uiGraphicsAndroid = "1.6.7"
-cameraCore = "1.3.3"
-lifecycleRuntimeCompose = "2.8.0"
-lifecycleRuntimeCompiler = "2.8.0"
-material3Android = "1.2.1"
-material3AndroidVersion = "1.2.1"
+nav = "2.8.0"
+navigationFragmentKtx = "2.8.0"
+navigationUiKtx = "2.8.0"
+uiGraphicsAndroid = "1.7.1"
+cameraCore = "1.3.4"
+lifecycleRuntimeCompose = "2.8.5"
+lifecycleRuntimeCompiler = "2.8.5"
+material3Android = "1.3.0"
+material3AndroidVersion = "1.3.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -155,6 +156,7 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 google-service = { id = "com.google.gms.google-services", version.ref = "googleService" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
 [bundles]
 voyager = ["voyager-core", "voyager-bs", "voyager-tab", "voyager-koin", "voyager-androidx", "voyager-transitions"]
